--- a/week8/stylehome.css
+++ b/week8/stylehome.css
@@ -27,26 +27,16 @@ text-decoration: none;
 header {
     position: relative;
 }
-.header-top i {
-    position: absolute;
-    margin: 12px;
-    margin-left: 12px;
-    font-size:  36px;
-    color: snow;
-    cursor: pointer;
-    z-index: 1;
-    margin-right: auto;
+.header-top {
+    background-color: #d08b2b;
+    box-shadow: 3px 3px 5px  rgba(0,0,0,.2);
 }
 .header-top ul {
-    position: absolute;
-    right: 0;
-    width: 300px;
-    height: 100vh;
-    padding: 150px 0 0 50px;
-    background: none;
-    display: block;
-    opacity: 0;
-    z-index: 1;
+   width: 100% ;
+ list-style: none;
+ display: flex;
+ justify-content: flex-end;
+ align-items: center;
 }
 .header-top ul.active {
     display: block;
@@ -54,27 +44,22 @@ header {
 }
 
 .header-top ul li {
-    margin-bottom: 20px;
-    font-size: 20px;
-    cursor: pointer;
-    animation: fade 0.3s linear backwards;
-    animation-delay: calc(0.3s * var(--x)) ;
+    height: 50px;
 }
-@keyframes fade {
-    0% {
-        transform: translateY(-30px);
-        opacity: 0;
-    }
+.header-top ul li:first-child {
+    margin-right: auto;
+    align-items: center;
+    display: flex;
+    padding-top: 10px;
 }
 .header-top ul li a {
-    display: block;
-    background-color: var(--main-color);
-    padding: 12px;
-    transition: all 0.3 ease;
-    border-bottom-left-radius: 5px;
-    border-top-left-radius: 5px;
-    color: snow;
+   height: 100%;
+    color: rgb(255, 255, 255);
     transition: .3s;
+    padding: 0 30px;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
 }
 .header-top ul li a:hover {
     color: rgb(215, 129, 48);
@@ -83,11 +68,11 @@ header {
 }
 .header-content {
     position: absolute;
-    top: 0;
+    top: 50px;
     left: 0;
     min-height: 100vh;
     background-color: rgba(255, 255, 255, 0.1) ;
-    padding: 45px 50px 0px 50px;
+    padding: 30px 50px 0px 50px;
     text-align: center;
     width: 400px;
 }
